--- a/jenkinsfile
+++ b/jenkinsfile
@@ -28,6 +28,7 @@ pipeline {
       stage('Login to stg-server and deploy the application') {
          steps {
 	   sh 'docker rm web -f'
+	   sh 'docker pull mdrajibkhan/myimage:v1'
 	   sh 'docker run --name web -dit -p 8081:8080 mdrajibkhan/myimage:v1'
 				
             }
