--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
             }
       stage('Build Docker Images') {
         steps {
-          sh 'docker build -t mdrajibkhan/myimage:v1 .'
+          sh 'docker build -t mdrajibkhan/myimage:v1 . ${env.BUILD_ID}'
             }
             }
       stage('Push the Docker Images') {
