--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
             }
       stage('Push the Docker Images') {
          steps {
-	   withCredentials([string(credentialsId: 'dockerHubPwd', variable: 'dockerHubPwd')]) {
+	   withCredentials([usernamePassword(credentialsId: 'dockerHubPwd', passwordVariable: 'dockerHubPwd', usernameVariable: 'dockerHubPwd')]) {
 	      sh "docker login -u mdrajibkhan -p ${dockerHubPwd}"
 		}
               sh 'docker push mdrajibkhan/myimage:v1'
